# gems_task

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  main.py  manage.py  pyproject.toml  task.txt
config/: .env
gems/: gems_loader.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
gems/migrations/: 0001_initial.py
gems_task/: asgi.py  settings.py  urls.py  wsgi.py
