[tool.poetry]
name = "gems-task"
version = "0.0.1"
description = ""
authors = ["Kirill Che <kiriciri@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gems_task" }
]

[tool.poetry.dependencies]
python = "^3.11"

Django = "^4.2.3"
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"
pytest-env = "^0.8.2"
pre-commit = "^3.3.3"

[tool.isort]
#https://pycqa.github.io/isort/index.html
profile = "pycharm"
known_local_folder = ["gems"]
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
skip = ["migrations", ".venv"]
line_length = 88
case_sensitive = true
lines_after_imports = -1
include_trailing_comma = true
ensure_newline_before_comments = false
force_grid_wrap = 0

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers --no-migrations --reuse-db -p no:warnings -m 'not slow'"
markers = [
  "slow: marks tests as slow"
]
testpaths = [
  "tests",
  "integration",
]
env = [
  'DJANGO_SETTINGS_MODULE=gems_task.settings',
]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

DJANGO_SETTINGS_MODULE = 'gems_task.settings'
django_debug_mode = false

[tool.black]
target-version = ['py311']
line-length = 88
skip-string-normalization = true
force-exclude = "migrations"

[tool.ruff]
select = ["ALL"]
ignore = [
  "ANN",
  "COM812", # Trailing comma missing
  "D",
  "ARG002", # Unused method argument
  "E501",  # Line too long
  "ERA001", # commented-out-code
  "I001", # unsorted-imports
  "PT023",
  "TRY003",
]

fixable = ["Q", "UP", "SIM", "PT", "ANN", "RET", "PLR"]
exclude = ["migrations"]

line-length = 88

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"*test*.py" = ["S101", "ARG001", "ARG002"]
"conftest.py" = ["ARG001"]
"manage.py" = ["EM101"]

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.flake8-type-checking]
strict = true

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["id", "__name__"]

[tool.ruff.flake8-bugbear]
#extend-immutable-calls = []

[tool.ruff.pep8-naming]
classmethod-decorators = [
  "classmethod",
]

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
